# macdl

./: .gitignore  LICENSE  README.md  pyproject.toml
macdl/: __init__.py  __main__.py  config.py  exceptions.py
macdl/cli/: __init__.py  main.py
macdl/core/: __init__.py  downloader.py  models.py  progress.py
macdl/gui/: __init__.py  app.py  main_window.py
macdl/plugins/: __init__.py  base.py  bunkr.py  gofile.py  http_plugin.py  krakenfiles.py  mediafire.py  pixeldrain.py  qiwi.py  registry.py
macdl/storage/: __init__.py  database.py
tests/: __init__.py
